[metadata]
name = IntuneCD
version = 2.4.0
author = Tobias Almén
author_email = almenscorner@outlook.com
description = Tool to backup and update configurations in Intune
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/almenscorner/IntuneCD
project_urls =
    Bug Tracker = https://github.com/almenscorner/IntuneCD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    deepdiff==8.4.2
    pyyaml>=6.0.2
    msrest>=0.7.1
    markdown_toclify>=0.1.7
    pytablewriter>=1.2.0
    msal>=1.31.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    IntuneCD-startbackup = IntuneCD.run_backup:start
    IntuneCD-startupdate = IntuneCD.run_update:start
    IntuneCD-startdocumentation = IntuneCD.run_documentation:start
    IntuneCD = IntuneCD.__main__:main
